# llm-document-ingestion

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  postman_collection.json  pyproject.toml  requirements.txt
app/: __init__.py  chunking_smart.py  chunking_structure.py  config.py  deletion.py  embeddings.py  ingestion.py  main.py  qdrant_client.py  utils_pdf.py  vlm_flowchart.py
app/chunking/: __init__.py  chunking_structure.py
app/embeddings/: __init__.py  google.py
app/parsers/: __init__.py  ocr.py  pdf_text.py
app/pipelines/: ingest_pdf.py
app/storage/: qdrant_store.py
app/utils/: hash_id.py
app/vision/: flowchart_extractor.py
cli/: __init__.py  delete_docs.py  ingest_pdf.py
ingest_queue/: failed_jobs.json
src/: __init__.py  api.py  bm25_endpoint.py  chunk.py  delete_qdrant_points.py  doc_parser.py  embed.py  logger.py  main.py  markdown.py  parse_cache.py  parser_utils.py  pipeline.py  pipeline_queue.py  pipeline_sync.py  prompts.py  qdrant_utils.py  retrieve.py  sync_utils.py  util_img.py  vlm.py  web.py
tests/: conftest.py  test_chunking_structure.py  test_hash_id.py
